# llvm-general-quote

./: .gitignore  LICENSE  README.md  language-llvm-quote.cabal  llvm-general-quote.cabal
Language/LLVM/: AST.hs
Language/LLVM/Parser/: Lexer.x  Monad.hs  Parser.y  Tokens.hs
Language/LLVM/Quote/: Base.hs  LLVM.hs
src/LLVM/General/Quote/: AST.hs  Base.hs  LLVM.hs  Parser.hs  SSA.hs
src/LLVM/General/Quote/Parser/: Lexer.x  Monad.hs  Parser.y  Tokens.hs
src/Language/LLVM/: AST.hs  Parser.hs
src/Language/LLVM/Parser/: Lexer.x  Monad.hs  Parser.y  Tokens.hs
src/Language/LLVM/Quote/: Base.hs  LLVM.hs
test/: test.hs
test/LLVM/General/Quote/Test/: Constants.hs  DataLayout.hs  InlineAssembly.hs  Instructions.hs  Loops.hs  Metadata.hs  Tests.hs
test/Language/LLVM/Test/: Constants.hs  DataLayout.hs  InlineAssembly.hs  Instructions.hs  Metadata.hs  Tests.hs
