name:                llvm-general-quote
version:             0.1.0.0
synopsis:            QuasiQuoting llvm code for llvm-general
homepage:            https://github.com/tvh/llvm-general-quote
description:
  This package provides a QuasiQuotation for llvm-general.

license:             BSD3
license-file:        LICENSE
author:              Timo von Holtz <tvh@tvholtz.de>
maintainer:          Timo von Holtz <tvh@tvholtz.de>
copyright:           Timo von Holtz 2014
category:            Compilers/Interpreters, Code Generation
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/tvh/llvm-general-quote.git

library
  exposed-modules:
    LLVM.General.Quote.Parser.Lexer,
    LLVM.General.Quote.Parser.Tokens,
    LLVM.General.Quote.Parser.Monad,
    LLVM.General.Quote.Parser.Parser,
    LLVM.General.Quote.Parser
  other-extensions:    CPP
  ghc-options:     -Wall
  build-depends:
    base >=4.7 && <4.8,
    array >=0.5 && <0.6,
    containers >=0.5 && <0.6,
    mtl,
    bytestring,
    symbol,
    srcloc,
    exception-transformers,
    mainland-pretty,
    llvm-general-pure,
    split      
  build-tools:         alex, happy
  hs-source-dirs: src
  default-language:    Haskell2010
